Pagina web con Flexbox y Grid

--- a/05_Grid_css/5_1_grid_pag/css/style.css
+++ b/05_Grid_css/5_1_grid_pag/css/style.css
@@ -22,7 +22,7 @@ header div{
 header nav{
     align-items: center;
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: row;
     height: 100%;
 }
 
