--- a/05_Grid_css/5_2_Ejercicios/Ejercicio 2/style.css
+++ b/05_Grid_css/5_2_Ejercicios/Ejercicio 2/style.css
@@ -47,7 +47,13 @@ height: 50px;
 border: 0px;
 }
 
-footer p{
+
+main img{
+float: left;
+}
+.material-icons.md-36 { font-size: 36px; }
+
+footer a{
     display: flex;
     flex-direction: column;
     font-family: Arial, Helvetica, sans-serif;
@@ -56,9 +62,7 @@ footer p{
     text-align: center;
     align-items: center;
     justify-items: center;
+    text-decoration: none;
+    color: black;
 
 }
-main img{
-float: left;
-}
-.material-icons.md-36 { font-size: 36px; }
